Delete useless files

--- a/Assignment1/Assignment1.csproj
+++ b/Assignment1/Assignment1.csproj
@@ -16,4 +16,7 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Utilities\MiscellaneousExtensionUtilities.cs" />
+  </ItemGroup>
 </Project>
