Add Facade on Menu

--- a/Assignment1/Assignment1.csproj
+++ b/Assignment1/Assignment1.csproj
@@ -19,4 +19,7 @@
   <ItemGroup>
     <Compile Remove="Utilities\MiscellaneousExtensionUtilities.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Menus\" />
+  </ItemGroup>
 </Project>
